--- a/index.html
+++ b/index.html
@@ -4,299 +4,198 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Evolución Biomédica</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     :root {
-      --green-light: #d4edda;
-      --green: #28a745;
-      --green-dark: #1e7e34;
-      --blue-light: #d1ecf1;
-      --blue: #17a2b8;
-      --blue-dark: #117a8b;
+      --bg-light: #f5f9f7;
+      --primary: #17a2b8;
+      --accent: #28a745;
       --danger: #f5576c;
-      --background: linear-gradient(135deg, #e8f5e9 0%, #e3f2fd 100%);
+      --text-dark: #333;
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body {
-      font-family: 'Poppins', sans-serif;
-      background: var(--background);
-      color: #333;
-      min-height: 100vh;
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body { font-family:'Poppins',sans-serif; background:var(--bg-light); color:var(--text-dark); }
+    .wrapper { max-width:1100px; margin:40px auto; padding:0 20px; }
+    h1 { text-align:center; margin-bottom:10px; font-weight:600; }
+    .filters {
+      display:flex; flex-wrap:wrap; gap:12px; justify-content:center; margin:20px 0;
     }
-    .selector-container {
-      position: fixed; top: 20px; right: 20px;
-      background: var(--green-light); padding: 12px 18px;
-      border-radius: 10px; box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-      z-index: 1001;
+    .filters label { font-weight:500; }
+    .filters input {
+      padding:6px 10px; border:1px solid #ccc; border-radius:4px;
+      background:#fff;
     }
-    .selector-container label {
-      font-weight: 600; margin-right: 8px; color: var(--green-dark);
+    .charts {
+      display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:24px; margin-bottom:40px;
     }
-    .selector-container select {
-      font-size: 0.95em; border-radius: 6px; padding: 6px 12px;
-      border: 2px solid var(--blue-light); background: #fff;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-      transition: border 0.2s, background 0.2s;
+    .chart-card {
+      background:#fff; padding:16px; border-radius:8px; box-shadow:0 2px 8px rgba(0,0,0,0.1);
     }
-    .selector-container select:focus {
-      border-color: var(--green); background: #f8fff9; outline: none;
+    .chart-card h3 { margin-bottom:8px; font-size:1em; text-align:center; }
+    .chart-card canvas { max-width:100%; height:200px; }
+    .data-table, .summary-table {
+      width:100%; border-collapse:collapse; margin-bottom:40px;
     }
-    .container {
-      max-width: 1250px; margin: 100px auto 40px;
-      background: #fff; border-radius: 20px;
-      box-shadow: 0 20px 48px rgba(0,0,0,0.07);
-      overflow: hidden; padding-bottom: 30px;
-      animation: fadeIn 1s ease-out;
+    .data-table th, .data-table td,
+    .summary-table th, .summary-table td {
+      border:1px solid #ddd; padding:8px; text-align:center;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: none; }
-    }
-    .header {
-      background: var(--blue); color: white;
-      padding: 30px 25px 20px;
-      display: flex; align-items: center; justify-content: center; gap: 20px;
-    }
-    .header img { height: 70px; width: auto; }
-    .header h1 { font-size: 2.2em; font-weight: 700; letter-spacing: -1px; }
-    .header p { font-size: 1.1em; opacity: 0.9; margin-top: 4px; }
-    .grid {
-      display: grid; grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-      gap: 36px; padding: 40px;
-    }
-    .card {
-      background: #fff; border-radius: 15px;
-      box-shadow: 0 6px 24px rgba(0,0,0,0.05), 0 1px 6px rgba(0,0,0,0.08);
-      padding: 20px; display: flex; flex-direction: column; align-items: center;
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-    .card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 12px 44px rgba(0,0,0,0.15);
-    }
-    .card h3 {
-      font-size: 1.2em; color: var(--green-dark);
-      margin-bottom: 18px; font-weight: 700; letter-spacing: 0.5px;
-    }
-    .chart-container { width: 100%; min-height: 225px; }
-    .summary-report {
-      background: #f5f9f7; border-top: 4px solid var(--green);
-      margin: 40px 20px 20px; padding: 30px 20px; border-radius: 0 0 20px 20px;
-    }
-    .summary-report h2 {
-      text-align: center; color: var(--green-dark);
-      margin-bottom: 10px; font-size: 1.8em;
-    }
-    .summary-dates {
-      text-align: center; margin-bottom: 20px;
-      color: var(--blue-dark); font-size: 0.95em;
-    }
-    .summary-table {
-      width: 100%; border-collapse: collapse; margin-top: 10px;
-    }
-    .summary-table th,
-    .summary-table td {
-      border: 1px solid #ddd; padding: 8px; text-align: center;
-    }
-    .summary-table th {
-      background: var(--blue-light); color: #000;
-    }
-    .positive { color: var(--green-dark); }
-    .negative { color: var(--danger); }
-    @media (max-width: 900px) {
-      .container { margin: 120px 10px 20px; }
-      .grid { padding: 20px; gap: 26px; }
-    }
-    @media (max-width: 600px) {
-      .selector-container {
-        position: static; margin: 10px auto; text-align: center;
-      }
-      .header {
-        flex-direction: column; padding: 20px 6vw 15px;
-      }
-      .header h1 { font-size: 1.8em; }
-      .grid {
-        display: block; padding: 10px 2vw;
-      }
-      .card { margin-bottom: 26px; }
+    .data-table th, .summary-table th { background:var(--primary); color:#fff; }
+    .summary-positive { color:var(--accent); }
+    .summary-negative { color:var(--danger); }
+    @media(max-width:600px){
+      .filters { flex-direction:column; }
     }
   </style>
 </head>
 <body>
-  <div class="selector-container">
-    <label for="clienteSelect">Cliente:</label>
-    <select id="clienteSelect"><option>—Cargando—</option></select>
-  </div>
-  <div class="container">
-    <div class="header">
-      <img src="logo.png" alt="Logo"/>
-      <div>
-        <h1>Evolución Biomédica</h1>
-        <p>Seguimiento Dinámico de Parámetros de Salud</p>
-      </div>
+  <div class="wrapper">
+    <h1>Evolución Biomédica</h1>
+    <div class="filters">
+      <label>Cliente:
+        <select id="clienteSelect"><option value="">—Cargando—</option></select>
+      </label>
+      <label>Desde:
+        <input type="date" id="fromDate"/>
+      </label>
+      <label>Hasta:
+        <input type="date" id="toDate"/>
+      </label>
+      <button id="applyFilter">Aplicar filtro</button>
     </div>
-    <div class="grid" id="chartsGrid"></div>
-    <div class="summary-report">
-      <h2>📋 Resumen de Progreso</h2>
-      <div class="summary-dates" id="summaryDates"></div>
-      <table class="summary-table">
-        <thead>
-          <tr>
-            <th>Métrica</th><th>Inicial</th><th>Final</th>
-            <th>Diferencia</th><th>Óptimo</th><th>Estado</th>
-          </tr>
-        </thead>
-        <tbody id="summaryTableBody"></tbody>
-      </table>
+
+    <div class="charts" id="chartsGrid">
+      <!-- Gráficos dinámicos -->
     </div>
+
+    <table class="data-table" id="dataTable">
+      <thead>
+        <tr><th>Fecha</th><th>Métrica</th><th>Valor</th></tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
+    <h2>📋 Resumen Estadístico</h2>
+    <table class="summary-table" id="summaryTable">
+      <thead>
+        <tr>
+          <th>Métrica</th><th>Inicial</th><th>Final</th>
+          <th>Diferencia</th><th>Óptimo</th><th>Estado</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
   </div>
 
   <script>
-    const SHEET_URL = 'https://script.google.com/macros/s/AKfycbw4p-6JUt9kx5K5qbFSWffaX9FtEQ0tK_ptRrYTSlZzIr-MxlAZPEIr0MK22fvDboGrUw/exec';
-    let charts = {}, fechasGlobal = [];
+    const SHEET_URL = 'https://script.google.com/macros/s/…/exec';
+    let rawData = [];
 
-    function drawChart(id, data, color) {
-      const ctx = document.getElementById(id).getContext('2d');
-      if (charts[id]) {
-        charts[id].data.labels = fechasGlobal;
-        charts[id].data.datasets[0].data = data;
-        charts[id].update();
-      } else {
-        charts[id] = new Chart(ctx, {
-          type: 'line',
-          data: {
-            labels: fechasGlobal,
-            datasets: [{
-              data,
-              borderColor: color,
-              backgroundColor: color + '33',
-              fill: true,
-              tension: 0.4,
-              pointRadius: 4
-            }]
+    async function fetchData(params='') {
+      const res = await fetch(SHEET_URL + params);
+      return res.json();
+    }
+
+    function buildCharts(data) {
+      const metrics = [
+        { key:'Peso corporal Kg', label:'Peso (Kg)', color:'#28a745' },
+        { key:'BMI (Índice Masa Corporal)', label:'BMI', color:'#17a2b8' },
+        { key:'% Grasa corporal', label:'% Grasa', color:'#f5576c' },
+        { key:'% Agua total del cuerpo', label:'% Agua', color:'#28a745' },
+        { key:'Masa muscular Kg', label:'Masa Muscular', color:'#17a2b8' },
+        { key:'BMR (Tasa Metabólica Basal)', label:'BMR', color:'#28a745' },
+        { key:'Edad metabólica', label:'Edad Metabólica', color:'#17a2b8' },
+        { key:'Nivel de grasa visceral', label:'Grasa Visceral', color:'#f5576c' }
+      ];
+      document.getElementById('chartsGrid').innerHTML = '';
+      const dates = data.map(r=>new Date(r.Fecha).toLocaleDateString());
+      metrics.forEach(m => {
+        const ctxId = 'chart_' + m.key.replace(/\s+/g,'');
+        document.getElementById('chartsGrid').innerHTML += `
+          <div class="chart-card">
+            <h3>${m.label}</h3>
+            <canvas id="${ctxId}"></canvas>
+          </div>`;
+        const ctx = document.getElementById(ctxId).getContext('2d');
+        new Chart(ctx, {
+          type:'line',
+          data:{ labels:dates, datasets:[{ data:data.map(r=>+r[m.key]||0),
+            borderColor:m.color, backgroundColor:m.color+'33', fill:true }]
           },
-          options: {
-            responsive: true,
-            maintainAspectRatio: false,
-            scales: {
-              x: { grid: { display: false } },
-              y: { beginAtZero: false, grid: { color: '#eee' } }
-            },
-            plugins: { legend: { display: false } }
-          }
+          options:{ responsive:true, scales:{ x:{grid:{display:false}} } }
         });
-      }
+      });
     }
 
-    function renderizarGraficos(datos) {
-      console.log('renderizarGraficos datos:', datos);
-      datos.sort((a, b) => new Date(a.Fecha) - new Date(b.Fecha));
-      fechasGlobal = datos.map(r =>
-        new Date(r.Fecha).toLocaleDateString('es-ES', { month: 'short', day: 'numeric' })
-      );
-      const getData = key => datos.map(r => parseFloat(r[key]) || 0);
-      const metrics = [
-        { key: 'Peso corporal Kg', id: 'pesoChart', color: '#28a745', label: 'Peso (Kg)' },
-        { key: 'BMI (Índice Masa Corporal)', id: 'bmiChart', color: '#17a2b8', label: 'BMI' },
-        { key: '% Grasa corporal', id: 'grasaChart', color: '#f5576c', label: '% Grasa' },
-        { key: '% Agua total del cuerpo', id: 'aguaChart', color: '#28a745', label: '% Agua' },
-        { key: 'Masa muscular Kg', id: 'musculoChart', color: '#17a2b8', label: 'Masa Muscular' },
-        { key: 'BMR (Tasa Metabólica Basal)', id: 'bmrChart', color: '#28a745', label: 'BMR' },
-        { key: 'Edad metabólica', id: 'edadChart', color: '#17a2b8', label: 'Edad Metabólica' },
-        { key: 'Nivel de grasa visceral', id: 'visceralChart', color: '#f5576c', label: 'Grasa Visceral' }
-      ];
-      const grid = document.getElementById('chartsGrid');
-      grid.innerHTML = metrics.map(m =>
-        `<div class="card"><h3>${m.label}</h3><div class="chart-container"><canvas id="${m.id}"></canvas></div></div>`
-      ).join('');
-      metrics.forEach(m =>
-        drawChart(m.id, getData(m.key), m.color)
-      );
+    function buildTable(data) {
+      const tbody = document.querySelector('#dataTable tbody');
+      tbody.innerHTML = '';
+      data.forEach(r => {
+        Object.keys(r).forEach(k => {
+          if (k==='Fecha' || isNaN(+r[k])) return;
+          const tr = document.createElement('tr');
+          tr.innerHTML = `<td>${new Date(r.Fecha).toLocaleDateString()}</td>
+                          <td>${k}</td><td>${r[k]}</td>`;
+          tbody.appendChild(tr);
+        });
+      });
     }
 
-    function generarResumen(datos) {
-      if (datos.length < 2) return;
-      const first = datos[0], last = datos[datos.length - 1];
-      document.getElementById('summaryDates').textContent =
-        `Desde ${new Date(first.Fecha).toLocaleDateString()} hasta ${new Date(last.Fecha).toLocaleDateString()}`;
+    function buildSummary(data) {
+      if (data.length<2) return;
+      const first = data[0], last = data[data.length-1];
       const metrics = [
-        { key: 'Peso corporal Kg', label: 'Peso (Kg)', optimal: 'IMC normal', classify: () => null },
-        {
-          key: 'BMI (Índice Masa Corporal)', label: 'BMI', optimal: '18.5–24.9',
-          classify: v => v < 18.5 ? 'Bajo peso' : v < 25 ? 'Normal' : v < 30 ? 'Sobrepeso' : 'Obesidad'
-        },
-        {
-          key: '% Grasa corporal', label: '% Grasa', optimal: 'Hombres:10–20%, Mujeres:18–28%',
-          classify: v => v < 10 ? 'Bajo' : v <= 20 ? 'Saludable' : v <= 28 ? 'Saludable' : 'Alto'
-        },
-        {
-          key: 'Masa muscular Kg', label: 'Masa Muscular', optimal: 'Varía según edad y sexo',
-          classify: () => null
-        },
-        {
-          key: 'BMR (Tasa Metabólica Basal)', label: 'BMR', optimal: 'Depende de edad/s.',
-          classify: () => null
-        },
-        {
-          key: 'Edad metabólica', label: 'Edad Metabólica', optimal: '<= Edad real',
-          classify: () => null
-        },
-        {
-          key: 'Nivel de grasa visceral', label: 'Grasa Visceral', optimal: '1–9 saludable',
-          classify: v => v <= 9 ? 'Saludable' : v <= 14 ? 'Moderado' : 'Alto riesgo'
-        }
+        { key:'Peso corporal Kg', label:'Peso (Kg)', optimal:'IMC 18.5–24.9', classify:v=>v<18.5?'Bajo peso':v<25?'Normal':'Sobrepeso' },
+        { key:'BMI (Índice Masa Corporal)', label:'BMI', optimal:'18.5–24.9', classify:v=>v<18.5?'Bajo peso':v<25?'Normal':'Sobrepeso' },
+        { key:'% Grasa corporal', label:'% Grasa', optimal:'10–20% H / 18–28% M', classify:v=>v<10?'Bajo':v<=28?'Saludable':'Alto' },
+        { key:'Nivel de grasa visceral', label:'Grasa Visceral', optimal:'1–9', classify:v=>v<=9?'Saludable':v<=14?'Moderado':'Alto riesgo' }
       ];
-      const tbody = document.getElementById('summaryTableBody');
+      const tbody = document.querySelector('#summaryTable tbody');
       tbody.innerHTML = '';
       metrics.forEach(m => {
-        const a = parseFloat(first[m.key]), b = parseFloat(last[m.key]);
-        if (isNaN(a) || isNaN(b)) return;
-        const diff = (b - a).toFixed(1), sign = diff >= 0 ? '+' : '';
-        const status = m.classify(b) ||
-          (diff === '0.0' ? 'Sin cambio' : diff > 0 ? 'Subió' : 'Bajó');
+        const a = +first[m.key], b = +last[m.key];
+        const diff = (b - a).toFixed(1), sign = diff>=0?'+':'';
+        const status = m.classify(b);
         const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${m.label}</td>
-          <td>${a}</td>
-          <td>${b}</td>
+        tr.innerHTML = `<td>${m.label}</td>
+          <td>${a.toFixed(1)}</td><td>${b.toFixed(1)}</td>
           <td>${sign}${diff}</td>
           <td>${m.optimal}</td>
-          <td class="${['Normal','Saludable'].includes(status)?'positive':'negative'}">${status}</td>
-        `;
+          <td class="${status==='Normal'||status==='Saludable'?'summary-positive':'summary-negative'}">${status}</td>`;
         tbody.appendChild(tr);
       });
     }
 
-    async function init() {
-      try {
-        const allData = await fetch(SHEET_URL).then(r => r.json());
-        console.log('Datos JSON:', allData);
-        const sel = document.getElementById('clienteSelect');
-        const names = [...new Set(allData.map(r => (r.Nombre + ' ' + r.Apellidos).trim()))];
-        sel.innerHTML = '<option value="">—Selecciona cliente—</option>';
-        names.forEach(n => {
-          const o = document.createElement('option');
-          o.value = n; o.textContent = n;
-          sel.appendChild(o);
-        });
-        sel.addEventListener('change', () => {
-          const [nom, ...ap] = sel.value.split(' '), apellido = ap.join(' ');
-          const url = sel.value
-            ? `${SHEET_URL}?nombre=${encodeURIComponent(nom)}&apellido=${encodeURIComponent(apellido)}`
-            : SHEET_URL;
-          fetch(url).then(r => r.json()).then(data => {
-            renderizarGraficos(data);
-            generarResumen(data);
-          });
-        });
-        renderizarGraficos(allData);
-        generarResumen(allData);
-      } catch (e) {
-        console.error('Error al cargar datos:', e);
-      }
+    async function applyFilter() {
+      const cliente = document.getElementById('clienteSelect').value;
+      let params = cliente ? `?nombre=${encodeURIComponent(cliente.split(' ')[0])}&apellido=${encodeURIComponent(cliente.split(' ')[1]||'')}` : '';
+      const from = document.getElementById('fromDate').value;
+      const to   = document.getElementById('toDate').value;
+      if (from) params += (params?'&':'?') + `from=${from}`;
+      if (to)   params += (params?'&':'?') + `to=${to}`;
+      const data = await fetchData(params);
+      rawData = data;
+      buildCharts(data);
+      buildTable(data);
+      buildSummary(data);
     }
 
+    async function init() {
+      const data = await fetchData();
+      rawData = data;
+      const sel = document.getElementById('clienteSelect');
+      [...new Set(data.map(r=>r.Nombre+' '+r.Apellidos))].forEach(n=>{
+        const opt = document.createElement('option');
+        opt.value = n; opt.textContent = n;
+        sel.appendChild(opt);
+      });
+      document.getElementById('applyFilter').addEventListener('click', applyFilter);
+      buildCharts(data);
+      buildTable(data);
+      buildSummary(data);
+    }
     init();
   </script>
 </body>
